--- a/ng-admin/src/account/account.component.html
+++ b/ng-admin/src/account/account.component.html
@@ -1,10 +1,10 @@
 ﻿<div class="container">
     <div class="top">
         <!-- <div class="head">
-            <img class="logo" src="/assets/images/logos/loginLogo.jpg">
+            <img class="logo" src="/assets/images/logos/gylogo2.png">
         </div> -->
-        <div class="text-center" style="color:white;">
-            <img style="height: 170px;" src="/assets/images/logos/Logo.png"></div>
+        <div class="text-center">
+            <img style="height: 120px;" src="/assets/images/logos/gylogo2.png"></div>
         <div *ngIf="showTenantChange()">
             <tenant-change></tenant-change>
         </div>
