--- a/ng-admin/src/layout/default/sidebar/components/sidebar-logo.component.html
+++ b/ng-admin/src/layout/default/sidebar/components/sidebar-logo.component.html
@@ -1,8 +1,8 @@
 <div class="logo" id="logo_container" [ngStyle]="{'background-color':logoBgColor}">
   <a>
-    <img class="expanded" *ngIf="!settings.layout.collapsed" src="/assets/images/logos/logo-txt-white-shield.svg" style="max-height:40px;"
-    />
-    <img class="collapsed" *ngIf="settings.layout.collapsed" src="/assets/images/logos/logo-white-shield.svg" style="max-height:30px;"
-    />
+    <!-- <img class="expanded" *ngIf="!settings.layout.collapsed" src="/assets/images/logos/logo-txt-white-shield.svg" style="max-height:40px;"/>
+    <img class="collapsed" *ngIf="settings.layout.collapsed" src="/assets/images/logos/logo-white-shield.svg" style="max-height:30px;"/>-->
+    <img class="expanded" *ngIf="!settings.layout.collapsed" src="/assets/images/logos/gylogo3.png" style="max-height:60px;" />
+    <img class="collapsed" *ngIf="settings.layout.collapsed" src="/assets/images/logos/gylogo4.png" style="max-height:50px;" />
   </a>
 </div>
