--- a/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
+++ b/ng-admin/src/basic-data/grower/grower-detail/grower-detail.component.html
@@ -1,4 +1,4 @@
-<!-- <pro-header></pro-header> -->
+<page-header title="信息维护"></page-header>
 <nz-tabset>
     <nz-tab nzTitle="信息维护">
         <nz-card [nzBordered]="false">
@@ -163,6 +163,8 @@
                     <tr>
                         <th>签到图片</th>
                         <th>烟技员</th>
+                        <th>任务名称</th>
+                        <th nzWidth="240px">考核项</th>
                         <th>签到地点</th>
                         <th>签到说明</th>
                         <th>签到时间</th>
@@ -174,6 +176,8 @@
                             <nz-avatar [nzSrc]="(data.imgPath | hostUrl)" style="width:80px;height: 80px;" (click)="handlePreview(data.imgPath)" [nzSize]="'large'" [nzShape]="'square'"></nz-avatar>
                         </td>
                         <td>{{data.employeeName}}</td>
+                        <td>{{data.taskName}}</td>
+                        <td>{{data.examinesName}}</td>
                         <td>{{data.location}}</td>
                         <td>{{data.desc}}</td>
                         <td>{{data.signTime| _date}}</td>
