--- a/ng-admin/src/basic-data/grower/grower.component.html
+++ b/ng-admin/src/basic-data/grower/grower.component.html
@@ -58,7 +58,7 @@
                 <td>{{data.name}}</td>
                 <td>{{data.unitName}}</td>
                 <td>{{data.tel}}</td>
-                <td>{{data.area}}</td>
+                <td>{{data.countyCode}}</td>
                 <td>{{data.employeeName}}</td>
                 <td>
                     <a (click)="goDetail(data.id)">详细信息</a>
