--- a/ng-admin/src/configs/data-config/data-config.component.html
+++ b/ng-admin/src/configs/data-config/data-config.component.html
@@ -1,3 +1,4 @@
+<page-header></page-header>
 <nz-tabset>
     <nz-tab nzTitle="烟叶服务">
         <div nz-row>
@@ -25,11 +26,11 @@
                 </ng-template>
                 <form nz-form (ngSubmit)="getAllLeafs()" [nzLayout]="'inline'">
                     <div nz-row [nzGutter]="24">
-                        <div nz-col [nzSpan]="8" class="mb-md" [class.text-right]="'true'">
+                        <div nz-col nzOffset="20" [nzSpan]="4" class="mb-md" [class.text-right]="'true'">
                             <!-- <button nz-button type="reset" (click)="refreshData()" [nzSize]="'large'" class="mx-sm">重置</button> -->
-                            <button nz-button type="button" (click)="addLeaf()" [nzType]="'primary'" [nzSize]="'large'">
+                            <button nz-button type="button" (click)="addLeaf()" nzShape="circle" [nzType]="'primary'" [nzSize]="'large'">
                                 <i class="anticon anticon-plus"></i>
-                                <span>新建</span>
+                                <!-- <span>新建</span> -->
                             </button>
                         </div>
                     </div>
@@ -91,10 +92,10 @@
                 </ng-template>
                 <form nz-form (ngSubmit)="getAllMetting()" [nzLayout]="'inline'">
                     <div nz-row [nzGutter]="24">
-                        <div nz-col [nzSpan]="8" class="mb-md" [class.text-right]="'true'">
-                            <button nz-button (click)="addConfigMetting()" [nzType]="'primary'" [nzSize]="'large'">
+                        <div nz-col nzOffset="20" [nzSpan]="4" class="mb-md" [class.text-right]="'true'">
+                            <button nz-button (click)="addConfigMetting()" nzShape="circle" [nzType]="'primary'" [nzSize]="'large'">
                                 <i class="anticon anticon-plus"></i>
-                                <span>新建</span>
+                                <!-- <span>新建</span> -->
                             </button>
                         </div>
                     </div>
