--- a/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
@@ -16,8 +16,8 @@
                     <nz-form-control nz-col [nzSm]="20">
                         <nz-radio-group formControlName="type" [(ngModel)]="task.type" class="mb-md">
                             <label nz-radio [nzValue]="o.value" *ngFor="let o of types">
-                                    <span>{{o.text}}</span>
-                                </label>
+                                <span>{{o.text}}</span>
+                            </label>
                         </nz-radio-group>
                     </nz-form-control>
                 </nz-form-item>
@@ -26,8 +26,8 @@
                     <nz-form-control nz-col [nzSm]="20">
                         <nz-radio-group formControlName="isExamine" [(ngModel)]="task.isExamine" class="mb-md">
                             <label nz-radio [nzValue]="o.value" *ngFor="let o of isExamines">
-                                    <span>{{o.text}}</span>
-                                </label>
+                                <span>{{o.text}}</span>
+                            </label>
                         </nz-radio-group>
                     </nz-form-control>
                 </nz-form-item>
@@ -44,16 +44,17 @@
     <form *ngIf="task.isExamine == true" nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
-                <button nz-button type="button" (click)="showModal(null)" nzType="primary">
-                        <i class="anticon anticon-plus"></i>
-                        <span>新增考核项</span>
-                    </button>
+                <button nz-button type="button" (click)="showModal(null)" [acl]="'CityAdmin'" nzType="primary">
+                    <i class="anticon anticon-plus"></i>
+                    <span>新增考核项</span>
+                </button>
             </div>
         </div>
     </form>
     <ng-template *ngIf="task.isExamine == true" #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-    <nz-table *ngIf="task.isExamine == true" #nzTable [nzData]="taskExamineList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
-        (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
+    <nz-table *ngIf="task.isExamine == true" #nzTable [nzData]="taskExamineList" [nzFrontPagination]="false" [nzTotal]="query.total"
+        [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading"
+        [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
                 <th>考核项名称</th>
@@ -75,14 +76,15 @@
     </nz-table>
     <footer-toolbar errorCollect>
         <button nz-button [nzType]="'default'" (click)="return()">
-                {{l("返回")}}
-            </button>
+            {{l("返回")}}
+        </button>
         <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading">
-                {{l("删除")}}
-            </button>
-        <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
-                {{l("保存")}}
-            </button>
+            {{l("删除")}}
+        </button>
+        <button nz-button [nzType]="'primary'" type="button" (click)="save()" [acl]="'CityAdmin'" [nzLoading]="isConfirmLoading"
+            [disabled]="!validateForm.valid">
+            {{l("保存")}}
+        </button>
     </footer-toolbar>
 </nz-card>
 <examine-detail-modal #selectExamineModal (modalSelect)="getSelectData($event)"></examine-detail-modal>
