--- a/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
@@ -15,7 +15,8 @@
                 <nz-form-item class="d-flex">
                     <nz-form-label nzFor="taskType">任务类型</nz-form-label>
                     <nz-form-control class="flex-1">
-                        <nz-select [nzPlaceHolder]="'请选择任务类型'" name="taskType" [(ngModel)]="search.taskType" [nzShowSearch]="true">
+                        <nz-select [nzPlaceHolder]="'请选择任务类型'" name="taskType" [(ngModel)]="search.taskType"
+                            [nzShowSearch]="true">
                             <nz-option *ngFor="let i of taskTypes" [nzLabel]="i.text" [nzValue]="i.value">
                             </nz-option>
                         </nz-select>
@@ -25,7 +26,7 @@
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                 <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
                 <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
-                <button nz-button type="button" (click)="createTask()" nzType="primary">
+                <button nz-button type="button" [acl]="'CityAdmin'" (click)="createTask()" nzType="primary">
                     <i class="anticon anticon-plus"></i>
                     <span>新建</span>
                 </button>
@@ -33,8 +34,9 @@
         </div>
     </form>
     <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-    <nz-table #nzTable [nzData]="taskList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData()"
-        (nzPageSizeChange)="refreshData()">
+    <nz-table #nzTable [nzData]="taskList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate"
+        [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
+        (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
                 <th>任务名称</th>
